# m_02_10

./: README.md  pyproject.toml
instagram/app_instagram/: admin.py  forms.py  models.py  urls.py  views.py
instagram/app_instagram/migrations/: 0001_picture_model.py
instagram/app_instagram/templates/app_instagram/: base.html  edit.html  index.html  pictures.html
instagram/instagram/: settings.py  urls.py
instagram/users/: forms.py  urls.py  views.py
instagram/users/templates/users/: login.html  logout.html  password_reset_done.html  register.html
