[tool.poetry]
name = "m-02-10"
version = "0.1.0"
description = ""
authors = ["Andrew <sideroalogo8@gmail.com>"]
readme = "README.md"
packages = [{include = "m_02_10"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
